# nuxt-tauri-test

./: .gitignore  .prettierignore  .test.env  Cargo.toml  buf.gen.yaml  buf.yaml  eslint.config.js  package.json
.github/workflows/: cicd.yaml
crates/app-grpc/: Cargo.toml  build.rs
crates/app-grpc/proto/whiterabbit/helloworld/v1/: helloworld.proto
crates/app-grpc/proto/whiterabbit/journal/v1/: journal.proto
crates/app-grpc/src/: helloworld.rs  lib.rs  main.rs  utils.rs
crates/app-grpc/src/journal/: mod.rs
crates/app-grpc/tests/shared/: journal.rs  mod.rs
crates/backend-core/: Cargo.toml
crates/backend-core/src/: lib.rs
crates/backend-core/src/error/: mod.rs  problem_detail.rs
crates/backend-core/src/models/: mod.rs
crates/backend-core/src/models/journal/: aggregate.rs  command.rs  mod.rs  presentation.rs  query.rs
crates/backend-core/src/models/journal/database/: journal.rs  journal_tag.rs  mod.rs
crates/backend-core/tests/: journal_test.rs
crates/backend-core/tests/shared/: mod.rs
crates/migration/: Cargo.toml
crates/migration/src/: m20220101_000001_create_table.rs
crates/test-suite/: Cargo.toml
crates/test-suite/src/: journal.rs  lib.rs
